--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.5+3
   path_provider: ^2.0.11
+  firebase_core: ^1.24.0
+  firebase_dart: ^1.0.11
+  firebase_database: ^9.1.6
 
 dev_dependencies:
   flutter_test:
