--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,6 +66,19 @@ flutter {
     source '../..'
 }
 
+plugins {
+
+  id 'com.android.application'
+
+  // Add the Google services Gradle plugin
+
+  id 'com.google.gms.google-services'
+
+
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation platform('com.google.firebase:firebase-bom:31.0.3')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 }
