--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  firebase_core: ^2.2.0
+  firebase_auth: ^4.1.2
 
 
 
@@ -40,6 +41,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.5+3
   path_provider: ^2.0.11
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
