--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.5+3
   path_provider: ^2.0.11
+  flutter_web_browser: ^0.17.1
+  url_launcher: ^6.1.7
 
 dev_dependencies:
   flutter_test:
