--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   path_provider: ^2.0.11
   flutter_web_browser: ^0.17.1
   url_launcher: ^6.1.7
+  firebase_core: ^2.3.0
+  firebase_auth: ^4.1.3
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
